src/styles/global.css
/* ./src/styles/global.css */

@font-face {
    font-family: NeueHaas;
    src: url(../static/fonts/NeueHaasVariableV1.2.ttf);
}

html {
    scroll-behavior: smooth;
}

body {
    margin: 0;
    padding: 0;
}

.outer-scroll-container {
    height: 100vh;
    overflow-y: hidden;
    /* width: 100%;
    height: 100vw;
    transform: rotate(-90deg) translateX(-100vh);
    transform-origin: top left;
    overflow-y: scroll;
    overflow-x: scroll;
    position: absolute;
    scrollbar-width: none;
    -ms-overflow-style: none;
    scroll-snap-type: y proximity;
    overscroll-behavior-x: none; */
}
::-webkit-scrollbar {
    display: none;
}

.inner-scroll-container {
    /* transform: rotate(90deg) translateY(-100vh);
    transform-origin: top left;
    height: 100vh; */
    height:100%;
}

.scroll-item {
    min-width: 100vw !important;
    width: 100vw;
    scroll-snap-align: center;
    height:100%;
}

/* collapse repeating elements into scroll item */
.scroll-speaker1 {
    background-image: url('../static/images/speaker1.png');
    background-size: 95vh;
    background-repeat: no-repeat;
    background-position-x: center;
    background-position-y: bottom;
}

.scroll-speaker2 {
    background-image: url('../static/images/speaker2.png');
    background-size: 70vh;
    background-repeat: no-repeat;
    background-position-x: center;
    background-position-y: bottom;
}

.scroll-speaker3 {
    background-image: url('../static/images/speaker3.png');
    background-size: 80vh;
    background-repeat: no-repeat;
    background-position-x: center;
    background-position-y: bottom;
}

.one-px {
    width: 1px;
}

.glass-container {
    background: url('../static/images/speaker4.png');
    background-position: center;
    border-radius: none;    
}

.glass {
   backdrop-filter: blur(10px);
}

@tailwind base;
@tailwind components;
@tailwind utilities;

